--- a/WOTS/Base.lproj/Main.storyboard
+++ b/WOTS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="9wY-Ye-KVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="rUh-yu-Ka1">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -180,10 +180,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Sh-W8-J4f" customClass="KolodaView" customModule="Koloda">
-                                <rect key="frame" x="10" y="121" width="355" height="183"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d3s-T8-1zm">
                                 <rect key="frame" x="118" y="339" width="138" height="39"/>
                                 <color key="backgroundColor" red="1" green="0.80000000000000004" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -210,28 +206,33 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s1J-Jc-75s">
-                                <rect key="frame" x="10" y="314" width="355" height="0.0"/>
+                                <rect key="frame" x="16" y="314" width="343" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Sh-W8-J4f" customClass="KolodaView" customModule="Koloda">
+                                <rect key="frame" x="16" y="114" width="343" height="190"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="190" id="cxQ-QM-TAX"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="6Sh-W8-J4f" firstAttribute="centerX" secondItem="Ni6-kt-UMs" secondAttribute="centerX" id="3yS-il-Cfi"/>
+                            <constraint firstAttribute="trailing" secondItem="6Sh-W8-J4f" secondAttribute="trailing" constant="16" id="D6A-qU-UCL"/>
                             <constraint firstItem="s1J-Jc-75s" firstAttribute="centerX" secondItem="Ni6-kt-UMs" secondAttribute="centerX" id="EVs-sX-WSa"/>
-                            <constraint firstItem="6Sh-W8-J4f" firstAttribute="leading" secondItem="Ni6-kt-UMs" secondAttribute="leading" constant="10" id="Kxt-kU-HFE"/>
+                            <constraint firstItem="6Sh-W8-J4f" firstAttribute="leading" secondItem="Ni6-kt-UMs" secondAttribute="leading" constant="16" id="FWW-NT-gg5"/>
                             <constraint firstItem="d3s-T8-1zm" firstAttribute="top" secondItem="s1J-Jc-75s" secondAttribute="bottom" constant="25" id="OHk-7i-lbY"/>
-                            <constraint firstItem="sM7-Mu-v9F" firstAttribute="top" secondItem="6Sh-W8-J4f" secondAttribute="bottom" constant="314" id="TMe-ib-ZFv"/>
+                            <constraint firstAttribute="trailing" secondItem="s1J-Jc-75s" secondAttribute="trailing" constant="16" id="Ozg-jN-3P1"/>
                             <constraint firstItem="d3s-T8-1zm" firstAttribute="centerX" secondItem="Ni6-kt-UMs" secondAttribute="centerX" id="VK1-X6-how"/>
                             <constraint firstItem="s1J-Jc-75s" firstAttribute="top" secondItem="6Sh-W8-J4f" secondAttribute="bottom" constant="10" id="VYB-tu-N8P"/>
-                            <constraint firstAttribute="trailing" secondItem="s1J-Jc-75s" secondAttribute="trailing" constant="10" id="XCw-5I-KeJ"/>
-                            <constraint firstItem="6Sh-W8-J4f" firstAttribute="top" secondItem="pnO-la-eya" secondAttribute="bottom" constant="57" id="Xd1-oJ-4Wv"/>
-                            <constraint firstAttribute="leadingMargin" secondItem="6Sh-W8-J4f" secondAttribute="leading" constant="10" id="b8H-uL-Dmf"/>
+                            <constraint firstItem="6Sh-W8-J4f" firstAttribute="top" secondItem="pnO-la-eya" secondAttribute="bottom" constant="50" id="Xd1-oJ-4Wv"/>
+                            <constraint firstItem="s1J-Jc-75s" firstAttribute="leading" secondItem="Ni6-kt-UMs" secondAttribute="leading" constant="16" id="eYf-nf-PSU"/>
                             <constraint firstItem="9pi-tb-bAc" firstAttribute="top" secondItem="d3s-T8-1zm" secondAttribute="bottom" constant="10" id="gLR-3j-Qit"/>
                             <constraint firstItem="9pi-tb-bAc" firstAttribute="centerX" secondItem="Ni6-kt-UMs" secondAttribute="centerX" id="pRb-IW-kRa"/>
-                            <constraint firstItem="s1J-Jc-75s" firstAttribute="leading" secondItem="Ni6-kt-UMs" secondAttribute="leading" constant="10" id="tKq-bu-0fp"/>
-                            <constraint firstAttribute="trailing" secondItem="6Sh-W8-J4f" secondAttribute="trailing" constant="10" id="vLZ-G6-luK"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="6Sh-W8-J4f" secondAttribute="trailing" constant="10" id="xCY-pz-HG2"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="Awe-Wl-CQc"/>
@@ -296,26 +297,10 @@
             </objects>
             <point key="canvasLocation" x="6743.1999999999998" y="-222.63868065967017"/>
         </scene>
-        <!--Initial Navigation Controller-->
-        <scene sceneID="cY6-aX-Dut">
-            <objects>
-                <navigationController id="9wY-Ye-KVM" customClass="InitialNavigationController" customModule="WOTS" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="GyS-2J-ZVp">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="rUh-yu-Ka1" kind="relationship" relationship="rootViewController" id="pJ8-Zg-tSQ"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fUP-7j-kVM" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="892" y="230"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="4PB-Yb-Yqr">
             <objects>
-                <tabBarController storyboardIdentifier="MainTabBarController" id="rUh-yu-Ka1" customClass="TabBarController" customModule="WOTS" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController id="rUh-yu-Ka1" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="RLp-pE-kNR"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="H6W-do-M98">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
@@ -340,7 +325,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cEc-Pl-2nr" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Review" image="learnIcon" id="4Am-Rz-Vh2"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="9rI-Pc-ZkH">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9rI-Pc-ZkH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.71764705882352942" green="0.97647058823529409" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
@@ -359,7 +344,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nfv-qe-f9z" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="fdZ-ea-QtO">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fdZ-ea-QtO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.71764705882352942" green="0.97647058823529409" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
@@ -419,7 +404,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uMY-KW-Ou3" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" tag="1" title="Explore" image="exploreIcon" id="WAo-Ap-y9b"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="iM2-UW-8IF">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="iM2-UW-8IF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.71764705882352942" green="0.97647058823529409" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
@@ -438,7 +423,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hht-Ii-9dy" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="RLh-Yv-al1">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RLh-Yv-al1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.71764705882352942" green="0.97647058823529409" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
@@ -458,7 +443,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ln3-gN-BUP" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" tag="2" title="Me" image="profileIcon" id="G9d-6m-afr"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="Vd1-Ub-SUH">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vd1-Ub-SUH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -476,7 +461,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="P7Q-IX-0tL" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="6dd-Tu-FYu">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6dd-Tu-FYu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
